--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="img/IMG-20210323-WA0023.jpg" alt="">
+                    <img src="IMG-20210323-WA0023.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sagar</div>
