--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!-- home section start -->
     <section class="home" id="home">
+        <img src="back.png" alt="">
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
