--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sagar</div>
-                    <p>I'm 19 years old and currently I'm persuing computer science engineering from SRM Institute of
+                    <p>I'm 21 years old and currently I'm persuing computer science engineering from SRM Institute of
                         technology.
                         I started learning web development a year back and I am love it till date , I like to learn new
                         topics in
@@ -157,7 +157,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Final cut pro</span>
+                            <span>Premiere pro</span>
                             <span>20%</span>
                         </div>
                         <div class="line mysql"></div>
